--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <div id="editor">
     <h2>Editor Python</h2>
-    <textarea id="code">def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))</textarea>
+    <textarea id="code"></textarea>
     <input type="text" id="nomeStudente" placeholder="Il tuo nome">
     <button onclick="runPython()">Esegui</button>
     <button onclick="inviaCodice()">Invia il codice</button>
@@ -103,3 +103,4 @@
   </script>
 </body>
 </html>
+
