--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Editor Python per Studenti</title>
+  <title>Editor Python con Monaco</title>
   <style>
     body {
       margin: 0;
@@ -12,25 +12,20 @@
     }
     #traccia {
       width: 50%;
-      padding: 0;
       background-color: #f0f0f0;
-      overflow: hidden;
       display: flex;
       flex-direction: column;
     }
     #editor {
       width: 50%;
-      padding: 20px;
-      background-color: #ffffff;
       display: flex;
       flex-direction: column;
+      padding: 20px;
+      box-sizing: border-box;
     }
-    textarea {
+    #monaco {
       flex-grow: 1;
-      width: 100%;
-      font-family: monospace;
-      font-size: 16px;
-      resize: none;
+      border: 1px solid #ccc;
     }
     input, button {
       margin-top: 10px;
@@ -48,16 +43,18 @@
       border: none;
     }
   </style>
+  <!-- Monaco Editor loader -->
+  <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs/loader.js"></script>
 </head>
 <body>
   <div id="traccia">
     <h2 style="padding: 10px;">Traccia dell'esercizio</h2>
-    <iframe src="Traccia11112025.pdf" width="100%" height="100%"></iframe>
+    <iframe src="traccia.pdf" width="100%" height="100%"></iframe>
   </div>
 
   <div id="editor">
     <h2>Editor Python</h2>
-    <textarea id="code"></textarea>
+    <div id="monaco"></div>
     <input type="text" id="nomeStudente" placeholder="Il tuo nome">
     <button onclick="runPython()">Esegui</button>
     <button onclick="inviaCodice()">Invia il codice</button>
@@ -67,7 +64,20 @@
   <!-- Skulpt: esecuzione Python nel browser -->
   <script src="https://cdn.jsdelivr.net/npm/skulpt@1.2.0/skulpt.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/skulpt@1.2.0/skulpt-stdlib.js"></script>
+
   <script>
+    let editor;
+
+    require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs' } });
+    require(['vs/editor/editor.main'], function () {
+      editor = monaco.editor.create(document.getElementById('monaco'), {
+        value: 'def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))',
+        language: 'python',
+        theme: 'vs-dark',
+        automaticLayout: true
+      });
+    });
+
     function outf(text) {
       document.getElementById("output").textContent += text;
     }
@@ -80,7 +90,7 @@
     }
 
     function runPython() {
-      const code = document.getElementById("code").value;
+      const code = editor.getValue();
       document.getElementById("output").textContent = "";
 
       Sk.configure({ output: outf, read: builtinRead });
@@ -93,15 +103,13 @@
 
     function inviaCodice() {
       const nome = document.getElementById("nomeStudente").value.trim();
-      const codice = document.getElementById("code").value;
+      const codice = editor.getValue();
       if (!nome) return alert("Inserisci il tuo nome prima di inviare");
 
-      const moduloURL = "https://docs.google.com/forms/d/e/1FAIpQLSd1HyZ3zHiNRrNtQ_3C7xPSFZb7FzEHAENjQOkJSAIMEswB_A/viewform?usp=sharing&ouid=117838916024083726115"; // ← Sostituisci con il tuo link
+      const moduloURL = "https://docs.google.com/forms/d/e/TUO_LINK/viewform"; // ← Sostituisci con il tuo link
       const query = `?usp=pp_url&entry.1234567890=${encodeURIComponent(nome)}&entry.0987654321=${encodeURIComponent(codice)}`;
       window.open(moduloURL + query, "_blank");
     }
   </script>
 </body>
 </html>
-
-
