--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
       const codice = editor.getValue();
       if (!nome) return alert("Inserisci il tuo nome prima di inviare");
 
-      const moduloURL = "https://docs.google.com/forms/d/e/TUO_LINK/viewform"; // ← Sostituisci con il tuo link
+      const moduloURL = "https://docs.google.com/forms/d/e/1FAIpQLSd1HyZ3zHiNRrNtQ_3C7xPSFZb7FzEHAENjQOkJSAIMEswB_A/viewform?embedded=true"; // ← Sostituisci con il tuo link
       const query = `?usp=pp_url&entry.1234567890=${encodeURIComponent(nome)}&entry.0987654321=${encodeURIComponent(codice)}`;
       window.open(moduloURL + query, "_blank");
     }
   </script>
 </body>
 </html>
+
 
