--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs' } });
     require(['vs/editor/editor.main'], function () {
       editor = monaco.editor.create(document.getElementById('monaco'), {
-        value: ''''Esercizio:\nAutore:\nData'''',
+         value: 'def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))',
         language: 'python',
         theme: 'vs-dark',
         automaticLayout: true
@@ -113,6 +113,7 @@
   </script>
 </body>
 </html>
+
 
 
 
