--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
       border: none;
     }
   </style>
-  <!-- Monaco Editor loader -->
-  <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs/loader.js"></script>
 </head>
 <body>
   <div id="traccia">
@@ -61,17 +59,21 @@
     <pre id="output"></pre>
   </div>
 
-  <!-- Skulpt: esecuzione Python nel browser -->
+  <!-- Skulpt -->
   <script src="https://cdn.jsdelivr.net/npm/skulpt@1.2.0/skulpt.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/skulpt@1.2.0/skulpt-stdlib.js"></script>
 
+  <!-- Monaco Editor loader -->
+  <script>
+    window.require = { paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs' } };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs/loader.js"></script>
   <script>
     let editor;
 
-    require.config({ paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs' } });
     require(['vs/editor/editor.main'], function () {
       editor = monaco.editor.create(document.getElementById('monaco'), {
-         value: 'def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))',
+        value: 'def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))',
         language: 'python',
         theme: 'vs-dark',
         automaticLayout: true
@@ -106,7 +108,7 @@
       const codice = editor.getValue();
       if (!nome) return alert("Inserisci il tuo nome prima di inviare");
 
-      const moduloURL = "https://docs.google.com/forms/d/e/1FAIpQLSd1HyZ3zHiNRrNtQ_3C7xPSFZb7FzEHAENjQOkJSAIMEswB_A/viewform?embedded=true"; // ← Sostituisci con il tuo link
+      const moduloURL = "https://docs.google.com/forms/d/e/1FAIpQLSd1HyZ3zHiNRrNtQ_3C7xPSFZb7FzEHAENjQOkJSAIMEswB_A/viewform";
       const query = `?usp=pp_url&entry.52675139=${encodeURIComponent(nome)}&entry.919605068=${encodeURIComponent(codice)}`;
       window.open(moduloURL + query, "_blank");
     }
