--- a/index.html
+++ b/index.html
@@ -2,48 +2,80 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Editor Python con Brython</title>
+  <title>Editor Python Mobile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      display: flex;
-      height: 100vh;
       font-family: sans-serif;
-    }
-    #traccia {
-      width: 50%;
-      background-color: #f0f0f0;
       display: flex;
       flex-direction: column;
+      height: 100vh;
     }
-    #editor {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
+    #traccia, #editor {
+      padding: 10px;
       box-sizing: border-box;
     }
+    #traccia {
+      background-color: #f0f0f0;
+    }
+    #pdfFrame {
+      width: 100%;
+      height: 300px;
+      border: none;
+    }
     #monaco {
-      flex-grow: 1;
+      height: 250px;
       border: 1px solid #ccc;
     }
-    input, button {
+    input, select {
+      width: 100%;
       margin-top: 10px;
-      padding: 10px;
+      padding: 12px;
       font-size: 16px;
+    }
+    .button-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .button-row button {
+      flex: 1 1 calc(50% - 10px);
+      padding: 10px;
+      font-size: 15px;
     }
     pre {
       background-color: #eee;
       padding: 10px;
       margin-top: 10px;
       white-space: pre-wrap;
+      max-height: 200px;
+      overflow-y: auto;
     }
-    iframe {
-      flex-grow: 1;
-      border: none;
+
+    @media (min-width: 768px) {
+      body {
+        flex-direction: row;
+      }
+      #traccia, #editor {
+        width: 50%;
+        height: 100vh;
+        overflow-y: auto;
+      }
+      #pdfFrame {
+        height: calc(100vh - 100px);
+      }
+      #monaco {
+        height: calc(100vh - 300px);
+      }
+      .button-row button {
+        flex: 1 1 auto;
+      }
     }
   </style>
-  <!-- Monaco Editor loader -->
+
+  <!-- Monaco Editor -->
   <script>
     window.require = { paths: { vs: 'https://cdn.jsdelivr.net/npm/monaco-editor@0.44.0/min/vs' } };
   </script>
@@ -52,19 +84,33 @@
   <!-- Brython -->
   <script src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/brython@3.11.0/brython_stdlib.js"></script>
+
+  <!-- jsPDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+
 <body onload="brython()">
   <div id="traccia">
-    <h2 style="padding: 10px;">Traccia dell'esercizio</h2>
-    <iframe src="traccia.pdf" width="100%" height="100%"></iframe>
+    <h2>Traccia</h2>
+    <select onchange="cambiaTraccia(this)">
+      <option value="traccia1.pdf">Traccia 1</option>
+      <option value="traccia2.pdf">Traccia 2</option>
+      <option value="traccia3.pdf">Traccia 3</option>
+    </select>
+    <iframe id="pdfFrame" src="traccia1.pdf"></iframe>
   </div>
 
   <div id="editor">
     <h2>Editor Python</h2>
     <div id="monaco"></div>
     <input type="text" id="nomeStudente" placeholder="Il tuo nome">
-    <button onclick="runPython()">Esegui</button>
-    <button onclick="inviaCodice()">Invia il codice</button>
+    <input type="file" accept=".py" onchange="caricaFile(this)">
+    <div class="button-row">
+      <button onclick="runPython()">Esegui</button>
+      <button onclick="inviaCodice()">Invia</button>
+      <button onclick="esportaPDF()">Esporta PDF</button>
+      <button onclick="stampaPDF()">Stampa PDF</button>
+    </div>
     <pre id="output"></pre>
   </div>
 
@@ -73,36 +119,98 @@
 
     require(['vs/editor/editor.main'], function () {
       editor = monaco.editor.create(document.getElementById('monaco'), {
-        value: 'def somma(n):\n    return sum(range(1, n+1))\n\nprint(somma(10))',
+        value: localStorage.getItem("codicePython") || 'print("Ciao Antonio!")',
         language: 'python',
         theme: 'vs-dark',
         automaticLayout: true
       });
+
+      editor.onDidChangeModelContent(() => {
+        localStorage.setItem("codicePython", editor.getValue());
+      });
     });
 
     function runPython() {
+      if (!editor) return alert("Editor non inizializzato");
       const code = editor.getValue();
+      const oldScript = document.getElementById("brython-script");
+      if (oldScript) oldScript.remove();
+
       const script = document.createElement("script");
       script.type = "text/python";
+      script.id = "brython-script";
       script.text = `
 from browser import document
 import sys
 output = document["output"]
 output.textContent = ""
-sys.stdout.write = lambda s: output.textContent += s
+def scrivi(s):
+    output.textContent = output.textContent + s
+sys.stdout.write = scrivi
 ` + code;
       document.body.appendChild(script);
-      brython(); // Rielabora il DOM per eseguire il nuovo script
+      brython();
     }
 
     function inviaCodice() {
       const nome = document.getElementById("nomeStudente").value.trim();
       const codice = editor.getValue();
-      if (!nome) return alert("Inserisci il tuo nome prima di inviare");
+      const output = document.getElementById("output").textContent.trim();
+      const dataOra = new Date().toLocaleString("it-IT");
+      if (!nome) return alert("Inserisci il tuo nome");
 
       const moduloURL = "https://docs.google.com/forms/d/e/1FAIpQLSd1HyZ3zHiNRrNtQ_3C7xPSFZb7FzEHAENjQOkJSAIMEswB_A/viewform";
-      const query = `?usp=pp_url&entry.52675139=${encodeURIComponent(nome)}&entry.919605068=${encodeURIComponent(codice)}`;
+      const query = `?usp=pp_url&entry.52675139=${encodeURIComponent(nome)}&entry.919605068=${encodeURIComponent(codice)}&entry.1234567891=${encodeURIComponent(dataOra)}&entry.9876543210=${encodeURIComponent(output)}`;
       window.open(moduloURL + query, "_blank");
+    }
+
+    function esportaPDF(stampa = false) {
+      const jsPDF = window.jspdf?.jsPDF;
+      if (!jsPDF) return alert("jsPDF non disponibile");
+
+      const doc = new jsPDF();
+      const nome = document.getElementById("nomeStudente").value.trim();
+      const codice = editor.getValue();
+      const output = document.getElementById("output").textContent.trim();
+      const dataOra = new Date().toLocaleString("it-IT");
+
+      doc.setFontSize(12);
+      doc.text(`Nome: ${nome}`, 10, 10);
+      doc.text(`Data e ora: ${dataOra}`, 10, 20);
+      doc.text("Codice Python:", 10, 30);
+      doc.setFont("Courier", "normal");
+      doc.setFontSize(10);
+      doc.text(doc.splitTextToSize(codice, 180), 10, 40);
+      const y = 40 + doc.splitTextToSize(codice, 180).length * 5 + 10;
+      doc.setFont("Helvetica", "normal");
+      doc.setFontSize(12);
+      doc.text("Output:", 10, y);
+      doc.text(doc.splitTextToSize(output, 180), 10, y + 10);
+
+      if (stampa) {
+        const blob = doc.output("blob");
+        const url = URL.createObjectURL(blob);
+        const win = window.open(url);
+        win.onload = () => win.print();
+      } else {
+        doc.save(`esercizio_${nome || "studente"}.pdf`);
+      }
+    }
+
+    function stampaPDF() {
+      esportaPDF(true);
+    }
+
+    function caricaFile(input) {
+      const file = input.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = e => editor.setValue(e.target.result);
+      reader.readAsText(file);
+    }
+
+    function cambiaTraccia(select) {
+      document.getElementById("pdfFrame").src = select.value;
     }
   </script>
 </body>
