--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Editor Python Mobile</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       margin: 0;
@@ -53,7 +53,6 @@
       max-height: 200px;
       overflow-y: auto;
     }
-
     @media (min-width: 768px) {
       body {
         flex-direction: row;
@@ -103,8 +102,8 @@
   <div id="editor">
     <h2>Editor Python</h2>
     <div id="monaco"></div>
-    <input type="text" id="nomeStudente" placeholder="Il tuo nome">
-    <input type="file" accept=".py" onchange="caricaFile(this)">
+    <input type="text" id="nomeStudente" placeholder="Il tuo nome" />
+    <input type="file" accept=".py" onchange="caricaFile(this)" />
     <div class="button-row">
       <button onclick="runPython()">Esegui</button>
       <button onclick="inviaCodice()">Invia</button>
@@ -118,16 +117,18 @@
     let editor;
 
     require(['vs/editor/editor.main'], function () {
-      editor = monaco.editor.create(document.getElementById('monaco'), {
-        value: localStorage.getItem("codicePython") || 'print("Ciao Antonio!")',
-        language: 'python',
-        theme: 'vs-dark',
-        automaticLayout: true
-      });
+      if (!editor) {
+        editor = monaco.editor.create(document.getElementById('monaco'), {
+          value: localStorage.getItem("codicePython") || 'print("Ciao Antonio!")',
+          language: 'python',
+          theme: 'vs-dark',
+          automaticLayout: true
+        });
 
-      editor.onDidChangeModelContent(() => {
-        localStorage.setItem("codicePython", editor.getValue());
-      });
+        editor.onDidChangeModelContent(() => {
+          localStorage.setItem("codicePython", editor.getValue());
+        });
+      }
     });
 
     function runPython() {
